[gd_scene load_steps=2 format=3 uid="uid://cd8hy7q4xmn3w"]

[ext_resource type="Script" path="res://addons/character_composer/composition_editor_panel.gd" id="1_k0wc6"]

[node name="CompositionEditorPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0wc6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="ToolBar" type="HBoxContainer" parent="HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="AddLayerButton" type="Button" parent="HBoxContainer/LeftPanel/ToolBar"]
layout_mode = 2
text = "Add"
tooltip_text = "Add a new layer"

[node name="RemoveLayerButton" type="Button" parent="HBoxContainer/LeftPanel/ToolBar"]
layout_mode = 2
text = "Remove"
tooltip_text = "Remove selected layer"

[node name="ValidateButton" type="Button" parent="HBoxContainer/LeftPanel/ToolBar"]
layout_mode = 2
text = "Validate"
tooltip_text = "Validate layer hierarchy"

[node name="BatchConvertButton" type="Button" parent="HBoxContainer/LeftPanel/ToolBar"]
layout_mode = 2
text = "Batch Convert"
tooltip_text = "Convert all Actor nodes in current scene"

[node name="LayerTree" type="Tree" parent="HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[node name="CenterPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/CenterPanel"]
layout_mode = 2
text = "Preview"

[node name="PreviewContainer" type="Control" parent="HBoxContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewDisplay" type="Control" parent="HBoxContainer/CenterPanel/PreviewContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RightPanel" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/RightPanel"]
layout_mode = 2
text = "Properties"

[node name="PropertiesScroll" type="ScrollContainer" parent="HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PropertiesPanel" type="VBoxContainer" parent="HBoxContainer/RightPanel/PropertiesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

